third_party/move/move-compiler/tests/move_check/parser/constants_hexstring.move
address 0x42 {
module M {
    fun u(): u64 { 0 }

    const C11: vector<u8> = x"deadbeef";
    const C12: vector<u8> = x"hello";
    const C13: vector<u8> = x"hello!";
}
}
